[package]
name = "serpentine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.60" }
tokio = { version = "1.23.0", features = ["time", "fs", "net", "rt", "macros"]   }
serpentine-macro = { path = "../serpentine-macro" }
futures = "0.3.25"
async-recursion = "1.0.0"
